--- a/src/Fable.GroupingPanel/Fable.GroupingPanel.fsproj
+++ b/src/Fable.GroupingPanel/Fable.GroupingPanel.fsproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Hooks.fs" />
     <Compile Include="GroupingPanel.fs" />
   </ItemGroup>
 
