Added UsersPage and routing to sample site.

--- a/src/Fable.SampleUI/src/Fable.SampleUI.fsproj
+++ b/src/Fable.SampleUI/src/Fable.SampleUI.fsproj
@@ -5,7 +5,8 @@
     <ItemGroup>
         <Compile Include="Css.fs" />
         <Compile Include="HookRouter.fs" />
-        <Compile Include="MessageInbox.fs" />
+        <Compile Include="InboxPage.fs" />
+        <Compile Include="UsersPage.fs" />
         <Compile Include="App.fs" />
         <Compile Include="Main.fs" />
     </ItemGroup>
