--- a/src/Fable.GroupingPanel/Fable.GroupingPanel.fsproj
+++ b/src/Fable.GroupingPanel/Fable.GroupingPanel.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.3.1</Version>
+    <Version>1.0.0</Version>
     <Authors>Jordan Marr</Authors>
     <Company />
     <RepositoryUrl>https://github.com/JordanMarr/Fable.GroupingPanel</RepositoryUrl>
@@ -11,6 +11,7 @@
     <Description>Fable.GroupingPanel is an F# computation expression for Fable.React that helps you to easily group UI data into one or more collapsible groups.</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <DisableImplicitFSharpCoreReference>True</DisableImplicitFSharpCoreReference>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,12 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fable.React" Version="6.2.0" />
-    <PackageReference Include="Fable.SimpleJson" Version="3.11.0" />
+    <PackageReference Include="Fable.React" Version="9.2.0" />
+    <PackageReference Include="Fable.SimpleJson" Version="3.24.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.7.2" />
+    <PackageReference Update="FSharp.Core" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
